force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/xDO_TTHAIR_Ininerary__c.object-meta.xml
<CustomObject>
    <label>TTH Itinerary</label>
    <nameField>
        <displayFormat>IT-{000000}</displayFormat>
        <label>Itinerary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itineraries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>