force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/fields/xDO_TTHAIR_Agency_Record_Locator__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Agency_Record_Locator__c</fullName>
    <label>Rec Loc</label>
    <length>20</length>
    <type>Text</type>
</CustomField>