force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/fields/xDO_TTHAIR_ARR_TIME__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_ARR_TIME__c</fullName>
    <formula>xDO_TTHAIR_Flight_Schedule__r.xDO_TTHAIR_Arrival_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR TIME</label>
    <type>DateTime</type>
</CustomField>