force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/fields/xDO_TTHAIR_Case__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Itineraries</relationshipName>
    <type>Lookup</type>
</CustomField>