force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/fields/xDO_TTHAIR_Comments_to_Agent__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Comments_to_Agent__c</fullName>
    <label>Comments to Agent</label>
    <type>TextArea</type>
</CustomField>