force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/fields/xDO_TTHAIR_DEP_TIME__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_DEP_TIME__c</fullName>
    <formula>xDO_TTHAIR_Flight_Schedule__r.xDO_TTHAIR_Departure_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEP TIME</label>
    <type>DateTime</type>
</CustomField>