force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/fields/xDO_TTHAIR_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Departure_Date__c</fullName>
    <formula>xDO_TTHAIR_Flight_Schedule__r.xDO_TTHAIR_Departure_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date</label>
    <type>DateTime</type>
</CustomField>