force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/fields/xDO_TTHAIR_End_Date__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>