force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/fields/xDO_TTHAIR_PNR__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_PNR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNR</label>
    <referenceTo>xDO_TTHAIR_PNR__c</referenceTo>
    <relationshipName>Itineraries</relationshipName>
    <type>Lookup</type>
</CustomField>