force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/fields/xDO_TTHAIR_Status__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HK Hold confirmed</fullName>
            </value>
            <value>
                <fullName>RQ Requested</fullName>
            </value>
            <value>
                <fullName>PN Pending</fullName>
            </value>
            <value>
                <fullName>UC Unable to confirm</fullName>
            </value>
            <value>
                <fullName>WL Waitlisted</fullName>
            </value>
            <value>
                <fullName>NS No show</fullName>
            </value>
            <value>
                <fullName>UG Upgraded</fullName>
            </value>
            <value>
                <fullName>DG Downgraded</fullName>
            </value>
            <value>
                <fullName>NN Need.. pretty please</fullName>
            </value>
            <value>
                <fullName>SS Force sell.</fullName>
            </value>
            <value>
                <fullName>DS Desires</fullName>
            </value>
            <value>
                <fullName>MM Employee nonrev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>