force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/fields/xDO_TTHAIR_Trip_Details__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Trip_Details__c</fullName>
    <label>Trip Details</label>
    <type>TextArea</type>
</CustomField>