force-app/main/default/objects/xDO_TTHAIR_Ininerary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>xDO_TTHAIR_Contact__c</columns>
    <columns>xDO_TTHAIR_Agency_Record_Locator__c</columns>
    <columns>NAME</columns>
    <columns>xDO_TTHAIR_Start_Date__c</columns>
    <columns>xDO_TTHAIR_End_Date__c</columns>
    <columns>xDO_TTHAIR_TicketStatus__c</columns>
    <columns>xDO_TTHAIR_Trip_Details__c</columns>
    <columns>xDO_TTHAIR_Flight_Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>